<?xml version="1.0"?>
<package format="2">
  <name>cab_driver</name>
  <version>0.0.0</version>
  <description>Package for the Cab Front Cleaning Robot Driver</description>

  <maintainer email="Joao.Moura@ed.ac.uk">Joao</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>serial</depend>
  <depend>serial_arm_lib</depend>
</package>
